color update for contrast fix

--- a/src/components/RandomSpace/RandomSpace.css
+++ b/src/components/RandomSpace/RandomSpace.css
@@ -1,5 +1,6 @@
 .RandomSpace {
-    background-color:#6d1f1f;
+    background-color:#0a3514;
+    box-shadow: 1em;
     color: #fff;
     border:none; 
     border-radius:10px; 
